// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when loading a nav bar we have expected props on initial load 1`] = `
Object {
  "callBack": [MockFunction],
  "hostname": "testHost",
  "loadingData": false,
  "password": "password123",
  "sessionExists": false,
  "text": "buttonText",
  "username": "user",
}
`;

exports[`when loading a nav bar we have proper state 1`] = `
Object {
  "loadingData": false,
  "sessionExists": false,
  "text": "Connect",
}
`;

exports[`when loading a nav bar we should have a full initialization 1`] = `
<ConnectButton
  callBack={[MockFunction]}
  hostname="testHost"
  loadingData={false}
  password="password123"
  sessionExists={false}
  text="buttonText"
  username="user"
>
  <button
    className="btn btn-primary float-right"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    buttonText
  </button>
</ConnectButton>
`;
